sumo/tests/duarouter/alternatives/style2_input/errors/vehicle/vehicle_empty_departlane/errors.duarouter
Error: Attribute 'departLane' in definition of a vehicle is empty.
Error: Invalid departLane definition for vehicle '1';
 must be one of ("random", "free", "allowed", "best", or an int>=0)
Quitting (on error).
